--- a/ImpuestosInternos.WebApi/appsettings.json
+++ b/ImpuestosInternos.WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=ImpuestosDb; user=sa; password=someThingComplicated1234; Trust Server Certificate=True;"
+    "DefaultConnection": "Server=localhost; Database=ImpuestosDb; Integrated Security=True; Trust Server Certificate=True;"
   }
 }
